# printerGroup/apiControllers/printerGroupAPIController.js
@@ -1,11 +1,13 @@
 const printerGroupController = require("../controllers/printerGroupControllers");
 const errConstant = require("../errors/printerGroupErrors");
 const db = require("../../util/database");
-const status = require('http-status');
-
+const status = require("http-status");
 
 const createPrinterGroupsReqHandler = async (req, res) => {
   try {
+    if (!Object.keys(req.body).length) {
+      throw errConstant.CONST_BAD_REQUEST_ERROR;
+    }
     const result = await printerGroupController.createPrinterGroups(
       req.body.title,
       req.body.description,
@@ -17,13 +19,46 @@ const createPrinterGroupsReqHandler = async (req, res) => {
   } catch (err) {
     switch (err) {
       case errConstant.CONST_BAD_REQUEST_ERROR:
-        res.status(status.BAD_REQUEST).send(errConstant.CONST_BAD_REQUEST_ERROR);
+        res
+          .status(status.BAD_REQUEST)
+          .send(errConstant.CONST_BAD_REQUEST_ERROR);
         break;
       case errConstant.CONST_TRIGGERS_NOTARRAY:
-        res.status(status.NOT_FOUND).send(errConstant.CONST_TRIGGERS_NOTARRAY);
-        break;  
+        res
+          .status(status.BAD_REQUEST)
+          .send(errConstant.CONST_TRIGGERS_NOTARRAY);
+        break;
       default:
-        res.status(status.INTERNAL_SERVER_ERROR).send(errConstant.CONST_INTERNAL_SERVER_ERROR);
+        res
+          .status(status.INTERNAL_SERVER_ERROR)
+          .send(errConstant.CONST_INTERNAL_SERVER_ERROR);
+        break;
+    }
+  }
+};
+
+const fetchOnePrinterGroupsListReqHandler = async (req, res) => {
+  try {
+    const result = await printerGroupController.fetchPrinterGroupDetails(
+      req.params.printerGroupId
+    );
+    res.status(status.OK).send(result);
+  } catch (err) {
+    switch (err) {
+      case errConstant.CONST_ERROR_INT_PRINTERGROUPID:
+        res
+          .status(status.BAD_REQUEST)
+          .send(errConstant.CONST_ERROR_INT_PRINTERGROUPID);
+        break;
+      case errConstant.CONST_INVALID_PRINTERGROUPID:
+        res
+          .status(status.NOT_FOUND)
+          .send(errConstant.CONST_INVALID_PRINTERGROUPID);
+        break;
+      default:
+        res
+          .status(status.INTERNAL_SERVER_ERROR)
+          .send(errConstant.CONST_INTERNAL_SERVER_ERROR);
         break;
     }
   }
@@ -31,18 +66,21 @@ const createPrinterGroupsReqHandler = async (req, res) => {
 
 const printerGroupsListReqHandler = async (req, res) => {
   try {
-    const result = await printerGroupController.printerGroupsList();
+    const result = await printerGroupController.printerGroupsList(
+      req.query.status
+    );
     res.status(status.OK).send(result);
   } catch (err) {
     switch (err) {
-      case errConstant.CONST_BAD_REQUEST_ERROR:
-        res.status(status.BAD_REQUEST).send(errConstant.CONST_BAD_REQUEST_ERROR);
+      case errConstant.CONST_ERROR_EMPTY_PRINTERGROUPLIST:
+        res
+          .status(status.NO_CONTENT)
+          .send(errConstant.CONST_ERROR_EMPTY_PRINTERGROUPLIST);
         break;
-      case errConstant.CONST_ERROR_PRINTERGROUPLIST:
-        res.status(status.NO_CONTENT).send(errConstant.CONST_ERROR_PRINTERGROUPLIST);
-        break;    
       default:
-        res.status(status.INTERNAL_SERVER_ERROR).send(errConstant.CONST_INTERNAL_SERVER_ERROR);
+        res
+          .status(status.INTERNAL_SERVER_ERROR)
+          .send(errConstant.CONST_INTERNAL_SERVER_ERROR);
         break;
     }
   }
@@ -50,26 +88,37 @@ const printerGroupsListReqHandler = async (req, res) => {
 
 const updatePrinterGroupsReqHandler = async (req, res) => {
   try {
+    if (!Object.keys(req.body).length) {
+      throw errConstant.CONST_BAD_REQUEST_ERROR;
+    }
     const result = await printerGroupController.updatePrinterGroups(
       req.body.title,
       req.body.description,
       req.body.printType,
-      req.params.printerGroupId,
+      req.params.printerGroupId
     );
     res.status(status.OK).send(result);
   } catch (err) {
     switch (err) {
       case errConstant.CONST_BAD_REQUEST_ERROR:
-        res.status(status.BAD_REQUEST).send(errConstant.CONST_BAD_REQUEST_ERROR);
+        res
+          .status(status.BAD_REQUEST)
+          .send(errConstant.CONST_BAD_REQUEST_ERROR);
         break;
       case errConstant.CONST_ERROR_INT_PRINTERGROUPID:
-        res.status(status.NOT_FOUND).send(errConstant.CONST_ERROR_INT_PRINTERGROUPID);
-        break; 
-      case errConstant.CONST_INVALID_PRINTERID:
-        res.status(status.NOT_FOUND).send(errConstant.CONST_INVALID_PRINTERID);
-        break;  
+        res
+          .status(status.BAD_REQUEST)
+          .send(errConstant.CONST_ERROR_INT_PRINTERGROUPID);
+        break;
+      case errConstant.CONST_INVALID_PRINTERGROUPID:
+        res
+          .status(status.NOT_FOUND)
+          .send(errConstant.CONST_INVALID_PRINTERGROUPID);
+        break;
       default:
-        res.status(status.INTERNAL_SERVER_ERROR).send(errConstant.CONST_INTERNAL_SERVER_ERROR);
+        res
+          .status(status.INTERNAL_SERVER_ERROR)
+          .send(errConstant.CONST_INTERNAL_SERVER_ERROR);
         break;
     }
   }
@@ -77,25 +126,36 @@ const updatePrinterGroupsReqHandler = async (req, res) => {
 
 const updatePrinterGroupTriggersReqHandler = async (req, res) => {
   try {
+    if (!Object.keys(req.body).length) {
+      throw errConstant.CONST_BAD_REQUEST_ERROR;
+    }
     const result = await printerGroupController.updatePrinterGroupTriggers(
       req.body.trigger,
       req.body.orderType,
-      req.params.printerGroupTriggerId,
+      req.params.printerGroupTriggerId
     );
     res.status(status.OK).send(result);
   } catch (err) {
     switch (err) {
       case errConstant.CONST_BAD_REQUEST_ERROR:
-        res.status(400).send(errConstant.CONST_BAD_REQUEST_ERROR);
+        res
+          .status(status.BAD_REQUEST)
+          .send(errConstant.CONST_BAD_REQUEST_ERROR);
         break;
       case errConstant.CONST_ERROR_INT_PRINTERGROUPTRIGGERID:
-        res.status(404).send(errConstant.CONST_ERROR_INT_PRINTERGROUPTRIGGERID);
-        break;  
-      case errConstant.CONST_INVALID_TRIGGERID:
-        res.status(404).send(errConstant.CONST_INVALID_TRIGGERID);
+        res
+          .status(status.BAD_REQUEST)
+          .send(errConstant.CONST_ERROR_INT_PRINTERGROUPTRIGGERID);
+        break;
+      case errConstant.CONST_INVALID_PRINTERGROUPTRIGGERID:
+        res
+          .status(status.NOT_FOUND)
+          .send(errConstant.CONST_INVALID_PRINTERGROUPTRIGGERID);
         break;
       default:
-        res.status(500).send(errConstant.CONST_INTERNAL_SERVER_ERROR);
+        res
+          .status(status.INTERNAL_SERVER_ERROR)
+          .send(errConstant.CONST_INTERNAL_SERVER_ERROR);
         break;
     }
   }
@@ -106,4 +166,5 @@ module.exports = {
   printerGroupsListReqHandler,
   updatePrinterGroupsReqHandler,
   updatePrinterGroupTriggersReqHandler,
+  fetchOnePrinterGroupsListReqHandler,
 };
