# printerGroup/controllers/printerGroupControllers.js
@@ -24,7 +24,7 @@ const createPrinterGroups = async (
   let t;
   try {
     t = await db.sequelize.transaction();
-    const printer = await db.PrinterGroups.create(
+    const printerGroup = await db.PrinterGroups.create(
       {
         title: title,
         description: description,
@@ -33,26 +33,24 @@ const createPrinterGroups = async (
       },
       { transaction: t }
     );
-    if (Array.isArray(triggers) == false) {
+    if (!Array.isArray(triggers)) {
       throw errConstant.CONST_TRIGGERS_NOTARRAY;
     } else {
-      const triggerArr = triggers;
-      const printerGroupArrObj = triggerArr.map((trigger) => {
-        trigger.printerGroupId = printer.id;
+      const printerGroupArrObj = triggers.map((trigger) => {
+        trigger.printerGroupId = printerGroup.id;
         return trigger;
       });
       console.log(printerGroupArrObj);
       await db.PrinterGroupTriggers.bulkCreate(printerGroupArrObj, {
-        individualHooks: true,
         transaction: t,
       });
       await t.commit();
     }
     return {
-      title: printer.title,
-      description: printer.description,
-      printType: printer.printType,
-      activeStatus: printer.activeStatus,
+      title: printerGroup.title,
+      description: printerGroup.description,
+      printType: printerGroup.printType,
+      activeStatus: printerGroup.activeStatus,
     };
   } catch (err) {
     await t.rollback();
@@ -68,23 +66,50 @@ const createPrinterGroups = async (
  * @returns
  */
 //PrinterGroup List
-const printerGroupsList = async () => {
+const printerGroupsList = async (status) => {
   try {
-    const printerList = await db.PrinterGroups.findAll({
+    let filters = {};
+    if (status == 1) {
+      filters.activeStatus = status;
+    }
+    if (status == 0) {
+      filters.activeStatus = status;
+    }
+    const printerGroupList = await db.PrinterGroups.findAll({
+      attributes: { exclude: ["createdBy", "updatedBy"] },
+      where: filters,
+    });
+    if (!printerGroupList.length) {
+      throw errConstant.CONST_ERROR_EMPTY_PRINTERGROUPLIST;
+    } else {
+      return printerGroupList;
+    }
+  } catch (err) {
+    console.log(err);
+    throw err;
+  }
+};
+
+//Fetch One PrinterGroup Details
+const fetchPrinterGroupDetails = async (printerGroupId) => {
+  try {
+    if (isNaN(printerGroupId)) {
+      throw errConstant.CONST_ERROR_INT_PRINTERGROUPID;
+    }
+    const printerGroupListDetails = await db.PrinterGroups.findOne({
       attributes: { exclude: ["createdBy", "updatedBy", "activeStatus"] },
-      where: { activeStatus: true },
       include: [
         {
           model: db.PrinterGroupTriggers,
           attributes: { exclude: ["createdBy", "updatedBy"] },
         },
       ],
+      where: { id: printerGroupId },
     });
-    if (!printerList.length) {
-      throw errConstant.CONST_ERROR_PRINTERGROUPLIST;
-    } else {
-      return printerList;
+    if (!printerGroupListDetails) {
+      throw errConstant.CONST_INVALID_PRINTERGROUPID;
     }
+    return printerGroupListDetails;
   } catch (err) {
     console.log(err);
     throw err;
@@ -110,19 +135,19 @@ const updatePrinterGroups = async (
     if (isNaN(printerGroupId)) {
       throw errConstant.CONST_ERROR_INT_PRINTERGROUPID;
     }
-    const check_pid = await db.PrinterGroups.findOne({
+    const printerGroup = await db.PrinterGroups.findOne({
       where: { id: printerGroupId },
     });
-    if (!check_pid) {
-      throw errConstant.CONST_INVALID_PRINTERID;
+    if (!printerGroup) {
+      throw errConstant.CONST_INVALID_PRINTERGROUPID;
     }
-    await db.PrinterGroups.update(
+    await printerGroup.update(
       {
         title: title,
         description: description,
         printType: printType,
       },
-      { where: { id: printerGroupId }, individualHooks: true }
+      { where: { id: printerGroupId } }
     );
     return resConstant.UPDATE_PRINTER_GROUP_RESPONSE;
   } catch (err) {
@@ -147,18 +172,18 @@ const updatePrinterGroupTriggers = async (
     if (isNaN(printerGroupTriggerId)) {
       throw errConstant.CONST_ERROR_INT_PRINTERGROUPTRIGGERID;
     }
-    const check_tid = await db.PrinterGroupTriggers.findOne({
+    const printerGroupTrigger = await db.PrinterGroupTriggers.findOne({
       where: { id: printerGroupTriggerId },
     });
-    if (!check_tid) {
-      throw errConstant.CONST_INVALID_TRIGGERID;
+    if (!printerGroupTrigger) {
+      throw errConstant.CONST_INVALID_PRINTERGROUPTRIGGERID;
     }
-    await db.PrinterGroupTriggers.update(
+    await printerGroupTrigger.update(
       {
         trigger: trigger,
         orderType: orderType,
       },
-      { where: { id: printerGroupTriggerId }, individualHooks: true }
+      { where: { id: printerGroupTriggerId } }
     );
     return resConstant.UPDATE_PRINTER_GROUP_TRIGGERS_RESPONSE;
   } catch (err) {
@@ -171,4 +196,5 @@ module.exports = {
   printerGroupsList,
   updatePrinterGroups,
   updatePrinterGroupTriggers,
+  fetchPrinterGroupDetails,
 };
